Limpeza no codigo.